--- a/backend/appstarter/Dockerfile
+++ b/backend/appstarter/Dockerfile
@@ -1,17 +1,9 @@
-FROM php:8.2-apache
+FROM php:8.2-cli
 
-RUN apt-get update && apt-get install -y \
-    libicu-dev \
-    libzip-dev \
-    unzip \
-    curl \
-    && docker-php-ext-install intl zip \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+RUN docker-php-ext-install intl \
+    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-
-WORKDIR /var/www/html
+WORKDIR /app
 
 COPY . .
 
@@ -19,4 +11,4 @@ RUN composer install --no-dev --optimize-autoloader
 
 EXPOSE 10000
 
-CMD ["php", "spark", "serve", "--host", "0.0.0.0", "--port", "10000"]
+CMD php spark serve --host 0.0.0.0 --port ${PORT:-10000}
