--- a/backend/appstarter/Dockerfile
+++ b/backend/appstarter/Dockerfile
@@ -1,6 +1,12 @@
 FROM php:8.2-cli
 
-RUN docker-php-ext-install intl \
+RUN apt-get update && apt-get install -y \
+    libicu-dev \
+    libzip-dev \
+    unzip \
+    && docker-php-ext-install intl zip \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 WORKDIR /app
