--- a/backend/appstarter/Dockerfile
+++ b/backend/appstarter/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.2-cli
+FROM php:8.2-apache
 
 RUN apt-get update && apt-get install -y \
     libicu-dev \
@@ -7,15 +7,18 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install intl zip \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
-    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
+    && a2enmod rewrite
 
-WORKDIR /app
+COPY apache.conf /etc/apache2/sites-enabled/000-default.conf
+
+WORKDIR /var/www/html
 
 COPY . .
 
-RUN composer install --no-dev --optimize-autoloader
-
-RUN chmod +x start.sh
+RUN composer install --no-dev --optimize-autoloader \
+    && chown -R www-data:www-data /var/www/html
 
 EXPOSE 10000
-CMD ["/bin/bash", "start.sh"]
+
+CMD ["apache2-foreground"]
