--- a/backend/appstarter/apache.conf
+++ b/backend/appstarter/apache.conf
@@ -1,4 +1,6 @@
-<VirtualHost *:80>
+Listen ${PORT}
+
+<VirtualHost *:${PORT}>
     DocumentRoot /var/www/html/public
 
     <Directory /var/www/html/public>
