agregar FollowSymLinks en apache.conf

--- a/backend/appstarter/apache.conf
+++ b/backend/appstarter/apache.conf
@@ -1,9 +1,10 @@
-Listen ${PORT}
+Listen 10000
 
-<VirtualHost *:${PORT}>
+<VirtualHost *:10000>
     DocumentRoot /var/www/html/public
 
     <Directory /var/www/html/public>
+        Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
